tests/baselines/reference/invokingNonGenericMethodWithTypeArguments2.errors.txt
==== tests/cases/compiler/invokingNonGenericMethodWithTypeArguments2.ts (1 errors) ====
    class Foo {
        private foo: any;
    
        constructor() {
            this.foo<string>();
                 ~~~
!!! invokingNonGenericMethodWithTypeArguments2.ts(5,14): error TS2158: Untyped function calls may not accept type arguments.
        }
    }
    